WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81188
java/java-and-plugins.html test failing
https://bugs.webkit.org/show_bug.cgi?id=81188
Summary
java/java-and-plugins.html test failing
Anders Carlsson
Reported
2012-03-14 21:19:39 PDT
java/java-and-plugins.html test failing
Attachments
Patch
(9.83 KB, patch)
2012-03-14 21:27 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-14 21:27:01 PDT
Created
attachment 131983
[details]
Patch
Anders Carlsson
Comment 2
2012-03-14 21:40:27 PDT
Committed
r110820
: <
http://trac.webkit.org/changeset/110820
>
Asadullah Ansari
Comment 3
2012-03-14 21:43:13 PDT
inside function static uint64_t remoteNPObjectID(Plugin* plugin, NPObject* npObject) if (!NPObjectProxy::isNPObjectProxy(npObject)) return 0; NPObjectProxy* npObjectProxy = NPObjectProxy::toNPObjectProxy(npObject); if (npObjectProxy->plugin() != plugin) return 0; In above two return some logical return should be used instead return 0 like INVALID_PROXY_ID
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug